<resources>
    <string name="app_name">AndroidPhotos32</string>
    <string name="action_search">Search Photos</string>
    <string name="add_album">Add Album</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="album_name_prompt">Album name: (required)</string>
    <string name="title_activity_add_album">Add new album</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_photos">Photos</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_fragment_label">First fragment</string>
    <string name="second_fragment_label">Second fragment</string>
    <string name="title_activity_open_album">OpenAlbum</string>
    <string name="move">Move</string>
    <string name="title_activity_open_photo">Slideshow</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="image">Image</string>
    <string name="add_tag">Add tag</string>
    <string name="title_activity_search_photos">SearchPhotos</string>
    <string name="tag_val_prompt">Enter at least one Location or Tag Value</string>
    <string name="enter_person_tag">Enter Person Tag</string>
    <string name="enter_location_tag">Enter Location Tag</string>
    <string name="search">Search</string>
    <string name="caption">Caption</string>
    <string name="title_activity_add_tag">AddTag</string>
</resources>